Fix text overflow

--- a/_sass/_sketches.sass
+++ b/_sass/_sketches.sass
@@ -3,6 +3,7 @@
 
   &__sketch
     margin: 40px 0 0 0
+    display: block
 
     &-hype
       width: 100%
@@ -51,6 +52,4 @@
 
     &__sketch
       margin: 80px 80px 0 0
-
-      &-hype
-        width: 300px
+      width: 300px
